# no8s-postgres

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ansible.yml  terraform.yml
ansible/: __init__.py  inventory.py
ansible/playbooks/: requirements.yml  site.yml
ansible/playbooks/roles/etcd/tasks/: main.yml
ansible/playbooks/roles/patroni/files/: patroni_facts.py
ansible/playbooks/roles/patroni/tasks/: main.yml
ansible/playbooks/roles/patroni/templates/: patroni.yml.j2
ansible/playbooks/roles/pgbackrest/tasks/: main.yml
ansible/playbooks/roles/postgresql/handlers/: main.yml
ansible/playbooks/roles/postgresql/tasks/: main.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/etcd/tasks/: main.yml
ansible/roles/etcd/templates/: etcd.env.j2
ansible/roles/patroni/files/: patroni_facts.py
ansible/roles/patroni/handlers/: main.yml
ansible/roles/pgbackrest/templates/: pgbackrest.conf.j2
ansible/roles/pgbouncer/handlers/: main.yml
docs/: api.md
src/no8s_postgres/: __init__.py  config.py  reconciler.py  workspace.py
src/no8s_postgres/ansible/: inventory.py  runner.py
src/no8s_postgres/ansible/playbooks/: site.yml
src/no8s_postgres/ansible/playbooks/roles/common/tasks/: main.yml
src/no8s_postgres/ansible/playbooks/roles/etcd/handlers/: main.yml
src/no8s_postgres/ansible/playbooks/roles/pgbouncer/tasks/: main.yml
src/no8s_postgres/cluster/: __init__.py  health.py  initialiser.py
src/no8s_postgres/github/: __init__.py  actions.py
src/no8s_postgres/terraform/templates/: main.tf  outputs.tf  variables.tf
terraform/: backend.tf  main.tf  variables.tf
tests/: conftest.py  test_ansible_runner.py  test_health.py  test_initialiser.py  test_inventory.py  test_reconciler.py
(+1 files in other folders)
