[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "no8s-postgres"
version = "0.1.0"
description = "HA PostgreSQL cluster reconciler plugin for no8s-operator"
requires-python = ">=3.11"
dependencies = [
#    "no8s-operator", # Commented out as not yet published on NPM
    "httpx",
    "asyncpg",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
]

[project.entry-points.'no8s.reconcilers']
postgres_cluster = 'no8s_postgres.reconciler:PostgresClusterReconciler'

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
